# Artemonim-Little-Tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.MD  RefactorTODO.md  SETUP_README.md  StylizerTODO.md  check.py  little_tools_utils.py  menu.py  pyproject.toml  refactoring_converter.py  requirements.txt  requirementsBuilder.py  requirements_infinite_differ.txt  requirements_telegram_distiller.txt  requirements_video_tools.txt  requirements_wmd_converter.txt  setup.cfg  start.bat  start.ps1  start.sh
.cursor/rules/: check.mdc  ignore.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: issue-cleanup.yml  pr-check.yml
.linting/: flake8.cfg  isort.cfg  mypy.ini  pyrightconfig.json
AgentTools/GithubIssueSynchronizationScript/.cursor/Gitdata/: .gitignore  ghsync.py  ghsync_Readme.md
AgentTools/GithubIssueSynchronizationScript/.cursor/rules/: git-interactions.mdc
Audio-_Video-2-Text/: README.md  requirements_whisper_transcriber.txt  requirements_whisper_transcriber_simple.txt  whisper_transcriber.py
Audio-_Video-2-Text/Sounds/: task_complete.opus
Docs/: ADDING_NEW_TOOLS.md  ADDING_NEW_TOOLS_QUICK.md  REMOVING_TOOLS.md  STYLE_GUIDELINES.md  ПРОЧТИМЕНЯ.MD
Legal/: CLA.md
TxtTools/: SyntxAiDownloader.py  TelegramChatsDistillator.py  Telegram_Chats_Distiller.py
TxtTools/CyrillicRemover/: CyrillicRemover.py
TxtTools/InfiniteDiffer/: .gitignore  InfiniteDiffer.py
TxtTools/MultipleTextComparator/: Infinite_Differ.py
TxtTools/WMDconverter/: .gitignore  WMDconverter.py
VideoTools/: FFMPEG_MKV_audio_normalizer.py  FFMPEG_MKV_audio_normlizer.py  Image_Audio_To_Video.py  README.md  Topaz_Video_Merger.py  ffmpeg_utils.py  video_converter.py
littletools_cli/: pyproject.toml
littletools_cli/littletools_cli/: __init__.py  menu.py
littletools_core/: __init__.py  pyproject.toml  utils.py
littletools_core/littletools_core/: __init__.py  huggingface_utils.py  utils.py
littletools_dev/: pyproject.toml
littletools_dev/.linting/: black.toml  isort.cfg
littletools_dev/littletools_dev/: __init__.py  __main__.py  version_bumper.py
littletools_speech/: pyproject.toml  whisper_transcriber.py
littletools_speech/Docs/: Whisper Dev Instruction.md
littletools_speech/littletools_speech/: __init__.py  whisper_transcriber.py
littletools_txt/: CyrillicRemover.py  SyntxAiDownloader.py  Telegram_Chats_Distiller.py  WMDconverter.py  pyproject.toml
littletools_txt/littletools_txt/: CyrillicRemover.py  SyntxAiDownloader.py  Telegram_Chats_Distiller.py  WMDconverter.py  __init__.py
littletools_video/: .gitignore  FFMPEG_MKV_audio_normalizer.py  Image_Audio_To_Video.py  Topaz_Video_Merger.py  ffmpeg_utils.py  pyproject.toml
littletools_video/Doc/: BEN2.md
littletools_video/Sounds/: error.opus
littletools_video/littletools_video/: FFMPEG_MKV_audio_normalizer.py  Image_Audio_To_Video.py  Topaz_Video_Merger.py  __init__.py  audio_normalizer.py  ben2_remover.py  ffmpeg_utils.py  mat_anyone_launcher.py  stable_diffusion_stylizer.py  stable_diffusion_stylizer_ISSUES.md  video_compiler.py  video_converter.py
littletools_video/littletools_video/mat_anyone/hugging_face/: app.py  matanyone_wrapper.py
littletools_video/littletools_video/mat_anyone/hugging_face/tools/: base_segmenter.py  download_util.py  interact_tools.py  mask_painter.py  misc.py  painter.py
littletools_video/littletools_video/mat_anyone/matanyone/inference/: image_feature_store.py  inference_core.py  kv_memory_store.py  memory_manager.py  object_info.py  object_manager.py
littletools_video/littletools_video/mat_anyone/matanyone/inference/utils/: args_utils.py
littletools_video/littletools_video/mat_anyone/matanyone/model/: aux_modules.py  big_modules.py  channel_attn.py  group_modules.py  matanyone.py  modules.py
littletools_video/littletools_video/mat_anyone/matanyone/model/transformer/: object_summarizer.py  object_transformer.py  positional_encoding.py  transformer_layers.py
littletools_video/littletools_video/mat_anyone/matanyone/model/utils/: memory_utils.py  parameter_groups.py  resnet.py
littletools_video/littletools_video/mat_anyone/matanyone/utils/: get_default_model.py  inference_utils.py  tensor_utils.py
littletools_video/littletools_video/mat_anyone/pretrained_models/: .gitkeep  README.md
temporary/: .gitignore
