[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-core"
version = "0.1.0"
description = "Core utilities for LittleTools project."
authors = [
    {name = "LittleTools"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "send2trash>=1.8.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.20.0",
    "typer[all]>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["."] 