[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-dev"
version = "1.0.0"
description = "Developer tools for the LittleTools project."
requires-python = ">=3.11"
dependencies = [
    # * Code quality and linting tools
    "flake8",
    "mypy",
    "black",
    "isort",
    "agent-docstrings",
    # * Additional development dependencies
    "types-requests",
    "types-setuptools",
    "types-Send2Trash",
    # * NPX is handled externally for pyright
]

[project.scripts]
version-bumper = "littletools_dev.version_bumper:app"
