[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-speech"
version = "0.1.0"
description = "Speech-to-text tools for the LittleTools suite."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "openai-whisper",
    "ffmpeg-python",
    "tqdm",
    "soundfile",
    "littletools_core @ file:../littletools_core",
]

[project.scripts]
whisper-transcriber = "littletools_speech.whisper_transcriber:main" 