[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-txt"
version = "0.1.0"
description = "Text processing tools for LittleTools project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "littletools-core",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pypandoc>=1.13",
    "typer[all]>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
telegram-distiller = "littletools_txt.Telegram_Chats_Distiller:main"
syntx-downloader = "littletools_txt.SyntxAiDownloader:main"
wmd-converter = "littletools_txt.WMDconverter:main"
cyrillic-remover = "littletools_txt.CyrillicRemover:app"

[project.entry-points."littletools.commands"]
cyrillic-remover = "littletools_txt.CyrillicRemover:app"
telegram-distiller = "littletools_txt.Telegram_Chats_Distiller:app"
syntx-downloader = "littletools_txt.SyntxAiDownloader:app"
wmd-converter = "littletools_txt.WMDconverter:app"

[tool.setuptools.packages.find]
where = ["."] 