[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-video"
version = "0.1.0"
description = "Video processing tools for the LittleTools suite."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "littletools-core",
    "typer[all]>=0.9.0",
    "Pillow>=9.5",
    "tqdm>=4.66.1",
    "opencv-python>=4.8",
    # Stable Diffusion dependencies
    "diffusers>=0.21.0",
    "transformers>=4.21.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "realesrgan>=0.3.0",
    # MatAnyone dependencies
    "cython",
    "gitpython>=3.1",
    "hickle>=5.0",
    "tensorboard>=2.11",
    "numpy>=1.21",
    "scipy>=1.7",
    "pycocotools>=2.0.7",
    "gradio==4.44.1",
    "gdown>=4.7.1",
    "einops>=0.6",
    "hydra-core>=1.3.2",
    "PySide6>=6.2.0",
    "charset-normalizer>=3.1.0",
    "netifaces>=0.11.0",
    "easydict",
    "av>=0.5.2",
    "requests",
    "pyqtdarktheme",
    "imageio==2.25.0",
    "imageio[ffmpeg]",
    "huggingface_hub",
    "safetensors",
    "progressbar2",
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "matplotlib",
    "pyyaml",
    "openmim",
    "psutil",
    "ffmpeg-python",
    "thinplate @ git+https://github.com/cheind/py-thin-plate-spline",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]

[project.optional-dependencies]
# Optional dependencies for improved performance and features
xformers = ["xformers>=0.0.20"]

[project.scripts]
ffmpeg-normalizer = "littletools_video.FFMPEG_MKV_audio_normalizer:main"
topaz-merger = "littletools_video.Topaz_Video_Merger:main"
video-converter = "littletools_video.video_converter:main"
image-audio-to-video = "littletools_video.Image_Audio_To_Video:main"
mat-anyone = "littletools_video.mat_anyone_launcher:app"
video-stylizer = "littletools_video.stable_diffusion_stylizer:app"

[project.entry-points."littletools.commands"]
video-converter = "littletools_video.video_converter:app"
ffmpeg-normalizer = "littletools_video.FFMPEG_MKV_audio_normalizer:app"
topaz-merger = "littletools_video.Topaz_Video_Merger:app"
image-audio-to-video = "littletools_video.Image_Audio_To_Video:app"
mat-anyone = "littletools_video.mat_anyone_launcher:app"
video-stylizer = "littletools_video.stable_diffusion_stylizer:app"

[tool.setuptools.packages.find]
where = ["."] 