[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletools-video"
version = "1.0.0"
description = "Video processing tools for the LittleTools suite."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "littletools-core",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "Pillow>=9.5",
    "opencv-python>=4.8",
    "ffmpeg-python>=0.2.0",
    # Stable Diffusion dependencies
    "diffusers>=0.27.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "accelerate>=0.20.0",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "xformers>=0.0.20",
    "controlnet-aux>=0.0.10",
    "compel>=2.0.0",
    "invisible-watermark>=0.2.0",

]

[project.optional-dependencies]
# Optional dependencies for improved performance and features
xformers = ["xformers>=0.0.20"]

[project.scripts]
audio-normalizer = "littletools_video.audio_normalizer:main"
video-compiler = "littletools_video.video_compiler:main"
video-converter = "littletools_video.video_converter:main"
image-audio-to-video = "littletools_video.Image_Audio_To_Video:main"
video-stylizer = "littletools_video.stable_diffusion_stylizer:app"

[project.entry-points."littletools.commands"]
video-converter = "littletools_video.video_converter:app"
audio-normalizer = "littletools_video.audio_normalizer:app"
video-compiler = "littletools_video.video_compiler:app"
image-audio-to-video = "littletools_video.Image_Audio_To_Video:app"
video-stylizer = "littletools_video.stable_diffusion_stylizer:app"

[tool.setuptools.packages.find]
where = ["."] 